--- a/public_html/main.css
+++ b/public_html/main.css
@@ -33,6 +33,65 @@ h2{
 .fixArea{
     padding-left:20px;
 }
-#welcome{
-    font-weight: 700;
+
+
+
+.wrapper {
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    margin: 0;
+    background-color: rgb(140, 189, 201);
+}
+
+
+
+.controls {
+    height: 100px;
+    margin: 5px 0px;
+    position: relative;
+}
+#historyMsg {
+    height: 75%;
+    background-color: #fff;
+    overflow: auto;
+    padding: 2px;
+    margin-right: 10px;
+}
+#historyMsg img {
+    max-width: 99%;
+}
+
+.items {
+    height: 30px;
+}
+#colorStyle {
+    width: 50px;
+    border: none;
+    padding: 0;
+}
+
+.imageLable {
+    position: relative;
+}
+#sendImage {
+    position: absolute;
+    width: 52px;
+    left: 0;
+    opacity: 0;
+    overflow: hidden;
+}
+
+#messageInput {
+    width: 90%;
+    max-width: 90%;
+    height: 90px;
+    max-height: 90px;
+    float:left;
+}
+#sendBtn {
+    width: 8%;
+    height: 96px;
+    margin-right: 10px;
+    float: right;
 }
