--- a/public_html/main.css
+++ b/public_html/main.css
@@ -32,6 +32,19 @@ h2{
 .fixArea{
     padding-left:20px;
 }
+#groupBt{
+    position: fixed;
+    background-color: rgba(41, 118, 160, 0.7);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    margin: 0px;
+    width: 75px;
+    height: 30px;
+    text-align: center;
+    padding: 5px;
+    color: rgb(32, 0, 83);
+    top: 95%;
+}
 
 
 .wrapper {
@@ -89,4 +102,27 @@ h2{
     height: 96px;
     margin-right: 10px;
     float: right;
+}
+#emojiWrapper {
+    display: none;
+    width: 500px;
+    bottom: 105px;
+    position: absolute;
+    background-color: #aaa;
+    box-shadow: 0 0 10px #555;
+}
+#emojiWrapper img {
+    margin: 2px;
+    padding: 2px;
+    width: 25px;
+    height: 25px;
+}
+#emojiWrapper img:hover {
+    background-color: blue;
+}
+.emoji{
+    display: inline;
+}
+.timespan {
+    color: #ddd;
 }
